src/App.css
.App {
  text-align: center;
  margin-top: 80px; /* This is to make sure the content is not hidden behind the navbar */
}

.App-header {
  background-color: #6f2dbd;
  min-height: 15vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: #ffffff;
}

.App-link {
  color: #61dafb;
}

.Basic-Button {
  background-color: #a663cc;
  border: 1px solid #a663cc;
  transition: background-color 0.25s, border-color 0.25s;
}

.Basic-Button:hover {
  background-color: #6f2dbd;
  border-color: #6f2dbd;
}

.Detailed-Button {
  background-color: #a663cc;
  border: 1px solid #a663cc;
  transition: background-color 0.25, border-color 0.25s;
  }

  .Detailed-Button:hover {
    background-color: #6f2dbd;
    border-color: #6f2dbd;
  }

.Home-Button {
  background-color: #a663cc;
  border: 1px solid #a663cc;
  transition: background-color 0.25s, border-color 0.25s;
  }

  .Home-Button:hover {
    background-color: #6f2dbd;
    border-color: #6f2dbd;
  }

.progress-bar {
  width: 100%;
  height: 100%;
  background-color: #000000;
  border-radius: 50px;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2), 0 2px 5px rgba(0, 0, 0, 0.1);
}

.progress-bar__fill {
  height: 100%;
  background-color: #b8d0e8;
  border-radius: inherit;
  transition: width 0.4s ease-in-out;
}

.progress-bar__text {
  padding-left: 10px;
  color: #fff;
  font-size: 12px;
  text-align: center;
  width: 100%;
}


/*
  It's giving me an error so I commented it off for now since it's not used yet

  .quiz {
  background-color: #00000;
  top: 0;
  left: 0;  
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: left;
  justify-content: center;
} */

.column {
  float: left;
  width: 50%;
  text-align: left;
}

.columnCenter {
  float: left;
  width: 50%;
  text-align: center;
}

/* Clear floats after the columns */
.row:after {
  content: "";
  display: table;
  clear: both;
}

.submit {
  width: auto;
  justify-content: center;
  justify-self: auto;
}

.Submit-Button {
  background-color: #b298dc;
  border: 1px solid #b298dc;
  transition: background-color 0.25s, border-color 0.25s;
  }

  .Submit-Button:hover {
    background-color: #6f2dbd;
    border-color: #6f2dbd;
  }
.container {display: inline-block; }
.text {
  font-size: 3em;
  letter-spacing: 10px;
  font-family: monospace;
  border-right: 5px solid;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  animation:
    typing 2s steps(18), 
    cursor .4s step-end infinite alternate;
}

/* cursor blinking */
@keyframes cursor {
  50% { border-color: transparent; }

}

/* Report Styling */
.Report {
  background-color: silver;
  /* border:solid black; */
  color: black;
  width: 60%;
  margin: auto;
}

.Report-Background {
  background-color: whitesmoke;
  border:solid black;
  color: black;
  width: 50%;
  margin: auto;
}

.Report-Header {
  background-color: #282c34;
  color: whitesmoke;
  height: 25vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  /* font-size: calc(10px + 2vmin); */
  margin: auto;
}

.Report-Back-Color {
  background-color: #282c34;
}

.Report-Intro {
  background-color: silver;
  color: black;
  border:solid black;
}

.Report-Title {
  background-color: whitesmoke;
  /* border:solid black; */
  color: black;
  width: 50%;
  text-align: center;
  margin: auto;
  padding-bottom: 10px;
}

.Report-Text {
  background-color: white;
  /* border:solid black; */
  color: black;
  width: 50%;
  text-align: center;
  margin: auto;
  /* padding-left: 80px; */
}

.Back-to-Quiz {
  background-color: #282c34;
  /* color: white */
}

